--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,4 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.177.0/containers/javascript-node
-// -
-{
+<iframe title="vimeo-player" src="https://player.vimeo.com/video/660540366?h=5d3935f870" width="640" height="360" frameborder="0"    allowfullscreen></iframe>
   "name": "docs.github.com",
   "build": {
     "dockerfile": "Dockerfile",
